--- a/src/app/_components/BaseDialog/BaseDialog.module.css
+++ b/src/app/_components/BaseDialog/BaseDialog.module.css
@@ -2,10 +2,6 @@
   animation: overlayShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
 }
 
-.content {
-  animation: contentShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
-}
-
 @keyframes overlayShow {
   from {
     opacity: 0;
@@ -15,13 +11,19 @@
   }
 }
 
+@media screen and (min-width: 640px) {
+  .content {
+    animation: contentShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
+  }
+}
+
 @keyframes contentShow {
   from {
     opacity: 0;
-    transform: translate(-50%, 23%) scale(0.96);
+    transform: translate(-50%, 90px) scale(0.96);
   }
   to {
     opacity: 1;
-    transform: translate(-50%, 25%) scale(1);
+    transform: translate(-50%, 100px) scale(1);
   }
 }
