--- a/src/app/music/[id]/_components/SectionVideo/plyr.css
+++ b/src/app/music/[id]/_components/SectionVideo/plyr.css
@@ -1014,16 +1014,25 @@ a.plyr__control:before {
 .plyr__video-wrapper {
   background: #000;
   background: var(--plyr-video-background, var(--plyr-video-background, #000));
-  height: 100%;
   margin: auto;
   overflow: hidden;
   position: relative;
   width: 100%;
+  height: 100%;
 }
 
-.plyr__video-wrapper[data-fullscreen="true"] {
-  max-height: 100vh;
-  width: auto;
+@media (min-aspect-ratio: 16 / 9) {
+  .plyr__video-wrapper[data-fullscreen="true"] {
+    height: 100%;
+    width: unset;
+  }
+}
+
+@media (max-aspect-ratio: 16 / 9) {
+  .plyr__video-wrapper[data-fullscreen="true"] {
+    width: 100%;
+    height: unset;
+  }
 }
 
 .plyr__video-embed,
