feat: add projects page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,8 +3,13 @@
 @tailwind utilities;
 
 html {
+  width: 100vw;
+}
+
+body {
   overflow-x: hidden;
 }
+
 ::-webkit-scrollbar {
   background-color: #202324;
   color: #aba499;
