feat: finish proof of snake lemma

--- a/src/app/_components/MarkdownGeneral/MarkdownGeneral.module.css
+++ b/src/app/_components/MarkdownGeneral/MarkdownGeneral.module.css
@@ -41,6 +41,10 @@
   @apply mb-3;
 }
 
+.markdown ol > li > p {
+  display: inline;
+}
+
 .markdown blockquote {
   background: #f9f9f9;
   border-left: 10px solid #ccc;
